# myst-test-chapter-numbering

./: README.md  myst.yml  pyproject.toml
content/: 1.md  1_intro.md  2.md  2_ecosystem_overview.md  3.md  4.md  4_assessment_outcomes.md
content/3/: 3.md  3a.md
