[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "myst-test-chapter-numbering"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
myst_test_chapter_numbering = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mystmd = ">=1.7.1,<2"
